# stretch-picker-demo

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
.github/workflows/: main.yml
demos/: banana.sh  bottle.sh  cup.sh  orange.sh
launch/: picker_demo.launch  stretch_picker_only.launch
src/: demo.py
src/demo/: audio.py  dance.py  demo.py  move.py
src/smart_cities/: audio.py  detect.py  move.py  moveit.py
src/smart_cities_clean/: api.py  audio.py  classes.py  detection.py  mover.py  picker.py  picker_not_working.py
src/smart_cities_clean/picker/: __main__.py  command_groups.py  joint_trajectory_server.py  picker.py  stretch_state_publisher.py
